# Options_In_Simulation

./: .gitignore  DQN_Rooms_Env.py  DQN_origin_terrain.py  KA_DDPG_r18_se_long.py  Macro__Agent.py  Macros.py  PPOc_terrain_t2v3.py  README.md  Rooms_Env.py  Rooms_Envs.py  anymal_terrain.py  cartpole_task.py  eval_DQN.py  eval_DQN_NN.py  eval_DQN_r3.py  eval_KA-DDPG_1D_seed2.py  eval_KA-DDPG_1D_seed3.py  eval_KA-DDPG_1D_seed4.py  eval_KA-DDPG_2D.py  eval_KAMMA.py  eval_KAMMA_g1d_g21.py  eval_PPO.py  eval_PPOCNN.py  eval_PPOc.py  legacy_setup.py  origin_terrain.py  pyproject.toml  q_learning.py  reaching_iiwa_omniverse_isaacgym_env.py  replacements.txt  setup.py  tensorboard_file_iterator.py  terrain_height_field.txt  train.py  train_DQN.py  train_DQN_HW.py  train_DQN_r2.py  train_DQN_r3.py  train_DQN_r4.py  train_DQN_r5.py  (+241 more)
Apptainer/: KA_DDPG_r18_se_long.sbatch  KA_DDPG_r18_se_medium.sbatch  isaac-sim-custom.def  jobscript.sbatch  train_DQN_r2.sbatch  train_DQN_r3.sbatch  train_DQN_r4.sbatch  train_DQN_r5.sbatch  train_DQN_r6.sbatch  train_DQN_r7.sbatch  train_PPO.sbatch
assets/: limo.usd  origin_v10.urdf
eval/: eval_kaddpg_1d.py  eval_kaddpg_2d.py  eval_kamma_4d.py  eval_kamma_4d_bd.py  eval_kamma_4d_gv.py  eval_kamma_controller.py
my_agents/: dqn.py  dqn2.py  option_critic.py  option_critic_v2.py  ppo.py  ppoCNN.py  ppoc.py  q_learning.py  train_OC.py
my_assets/: husky_usd.usd  husky_v2.usd  iiwa14.usd  instanceable_meshes.usd  origin.usd  origin_c10.usd  origin_elevated.usd  origin_meshes.usd  origin_v10.usd  origin_v10_arms.usd  origin_v10_inst.usd  origin_v10_meshes.usd  origin_v11.usd  origin_v11_inst.usd
my_envs/: DQN_Rooms_Env.py  DQN_Rooms_Envs.py  DQN_origin_terrain.py  KAMMA.py  (+190 more)
(+1048 files in other folders)
