[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-sim"
version = "0.1.0"
requires-python = ">=3.10,<3.13"   
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true  # if you have non-py files inside packages

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "my_agents*",
  "my_envs*",
  "my_models*",
  "my_robots*",
  "my_utils*",
  "my_trainers*",
  "options_sim*",
  "my_assets"
]

# Include all non-Python files inside the my_assets package
[tool.setuptools.package-data]
"my_assets" = ["**/*"]

[project.scripts]
options-sim-train = "options_sim.cli.train:main"
options-sim-eval  = "options_sim.cli.eval:main"
options-sim-artifacts = "options_sim.cli.artifacts:main"
options-sim-eval-artifacts = "options_sim.cli.eval_artifacts:main"

[project.optional-dependencies]
artifacts = ["tensorboard>=2.14", "matplotlib>=3.8"]
sim = ["omniisaacgymenvs", "skrl"]
dev = ["pytest"]
